@@ -1,3 +1,5 @@
+* Remove method wrapping for Array#sort in the __proto__ fork. [jddalton]
+
 * Ensure `reStrict` detects the strict mode directive correctly. [jddalton, kangax, Kit Goncharov]
 
 * Add supplemental checks for the Firefox iframe issue with sandboxed natives. [jddalton]
